--- a/index.html
+++ b/index.html
@@ -1,48 +1,98 @@
-<script type="text/javascript" src="https://gemkom-1.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/xghl7j/b/9/c95134bc67d3a521bb3f4331beb9b804/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=tr-TR&collectorId=3eb49cb5"></script>
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemkom</title>
+    <title>GEMKOM - İç Sistem</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="components/timerWidget.css" rel="stylesheet">
-    <link href="components/shared.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/gemkom.png">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="components/navbar.css">
+    <link rel="icon" type="image/png" href="images/gemkom.png">
     <link rel="stylesheet" href="pre-auth.css">
 </head>
 <body class="pre-auth">
-    <!-- Header will be dynamically inserted -->
-    <div id="header-container"></div>
+    <!-- Navigation -->
+    <div id="navbar-container"></div>
 
-    <!-- Main Content -->
-    <main class="container">
-        <div class="row justify-content-center">
-            <div class="col-12">
-                <div class="modules-section">
-                    <h2 class="text-center mb-5">Modüller</h2>
-                    <div class="row g-4" id="modules-container">
-                        <!-- Module cards will be dynamically generated here -->
+    <!-- Modules Section -->
+    <section class="modules-section py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center mb-5">
+                    <h2 class="section-title">Çalışma Alanları</h2>
+                    <p class="text-muted">Takımınıza göre ilgili alanı seçin</p>
+                </div>
+            </div>
+            
+            <div class="row g-4">
+                <!-- Machining Module -->
+                <div class="col-md-6 col-lg-6">
+                    <div class="module-card clickable" id="machining-card" onclick="window.location.href='/machining'">
+                        <div class="card-icon">
+                            <i class="fas fa-cogs"></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Talaşlı İmalat</h5>
+                            <p class="card-text">Makine görevlerini yönetin, zamanlayıcıları kullanın ve üretim süreçlerini takip edin.</p>
+                            <div class="card-features">
+                                <span class="feature-tag"><i class="fas fa-clock"></i> Zamanlayıcı</span>
+                                <span class="feature-tag"><i class="fas fa-tasks"></i> Görev Yönetimi</span>
+                                <span class="feature-tag"><i class="fas fa-chart-line"></i> Raporlama</span>
+                            </div>
+                            <div class="card-action">
+                                <span class="action-text">
+                                    <i class="fas fa-arrow-right me-2"></i>Modüle Git
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Maintenance Module -->
+                <div class="col-md-6 col-lg-6">
+                    <div class="module-card clickable" id="maintenance-card" onclick="window.location.href='/maintenance'">
+                        <div class="card-icon">
+                            <i class="fas fa-tools"></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Bakım</h5>
+                            <p class="card-text">Bakım taleplerini yönetin, planlı bakımları takip edin ve ekipman durumlarını izleyin.</p>
+                            <div class="card-features">
+                                <span class="feature-tag"><i class="fas fa-wrench"></i> Bakım Talepleri</span>
+                                <span class="feature-tag"><i class="fas fa-calendar"></i> Planlı Bakım</span>
+                                <span class="feature-tag"><i class="fas fa-clipboard-list"></i> Kontrol Listeleri</span>
+                            </div>
+                            <div class="card-action">
+                                <span class="action-text">
+                                    <i class="fas fa-arrow-right me-2"></i>Modüle Git
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </main>
+    </section>
 
-    <!-- Footer will be dynamically inserted -->
-    <div id="footer-container"></div>
+    <!-- Footer -->
+    <footer class="footer-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>GEMKOM</h5>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p class="text-light mb-0">&copy; 2024 GEMKOM. Tüm hakları saklıdır.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-    <!-- Bootstrap JS and Popper.js -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Main Script -->
     <script type="module" src="main.js"></script>
-    <!-- Timer Widget -->
-    <script type="module" src="components/timerWidgetInit.js"></script>
 </body>
-</html>
+</html> 
