--- a/machining/index.html
+++ b/machining/index.html
@@ -3,49 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemkom - Talaşlı İmalat</title>
+    <title>GEMKOM - Talaşlı İmalat</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="machining.css">
     <link rel="stylesheet" href="../components/machineTaskView.css">
+    <link rel="stylesheet" href="../components/navbar.css">
     <link rel="stylesheet" href="../components/timerWidget.css">
-    <link rel="stylesheet" href="../components/shared.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
     <link rel="stylesheet" href="../pre-auth.css">
 </head>
 <body class="pre-auth">
-    <!-- Header will be dynamically inserted -->
-    <div id="header-container"></div>
+    <!-- Navigation -->
+    <div id="navbar-container"></div>
 
-    <!-- Mobile Navigation Tabs -->
-    <nav class="mobile-nav">
+    <!-- Page Header -->
+    <div class="page-header">
         <div class="container">
-            <div class="nav-tabs-container">
-                <button class="nav-tab active" data-section="active-timers">
-                    <i class="fas fa-play-circle"></i>
-                    <span>İş Başlat</span>
-                </button>
-                <button class="nav-tab" data-section="finished-timers">
-                    <i class="fas fa-check-circle"></i>
-                    <span>Biten İşler</span>
-                </button>
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <h1 class="page-title">
+                        <i class="fas fa-cogs me-3"></i>
+                        Talaşlı İmalat
+                    </h1>
+                    <p class="page-subtitle">Makine görevlerini görüntüleyin ve zamanlayıcıları yönetin. </p>
+                </div>
+                <div class="col-md-4 text-md-end">
+                    <div class="page-actions">
+                        <button class="btn btn-primary" id="refresh-btn">
+                            <i class="fas fa-sync-alt me-2"></i>Yenile
+                        </button>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Tab Navigation -->
+            <div class="row mt-4">
+                <div class="col-12">
+                    <div class="page-tabs">
+                        <button class="tab-button active" data-tab="active-timers">
+                            <i class="fas fa-play-circle me-2"></i>
+                            <span class="tab-label">İş Başlat</span>
+                        </button>
+                        <button class="tab-button" data-tab="finished-timers">
+                            <i class="fas fa-check-circle me-2"></i>
+                            <span class="tab-label">Biten Zamanlayıcılar</span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
+    </div>
 
     <!-- Main Content -->
-    <main class="main-content">
-        <div class="container">
-            <div class="main-container">
-                <div id="main-view"></div>
+    <div class="main-layout">
+        <!-- Content Area -->
+        <div class="content-area">
+            <div class="container">
+                <div class="main-container">
+                    <div id="main-view"></div>
+                </div>
             </div>
         </div>
-    </main>
-
-    <!-- Footer will be dynamically inserted -->
-    <div id="footer-container"></div>
+    </div>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
