--- a/machining/tasks/index.html
+++ b/machining/tasks/index.html
@@ -6,40 +6,74 @@
     <title>Gemkom - Talaşlı İmalat</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="tasks.css">
+    <link rel="stylesheet" href="../../components/navbar.css">
     <link rel="stylesheet" href="../../components/timerWidget.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
     <link rel="stylesheet" href="../../pre-auth.css">
 </head>
 <body class="pre-auth">
+    <!-- Navigation -->
+    <div id="navbar-container"></div>
 
     <!-- Main Content -->
-    <div class="container mt-4">
-        <div id="timer-container" class="timer-container">
-            <div id="title-row" class="title-row">
-                <h2 id="task-title" class="task-title"></h2>
-                <div class="task-right">
-                    <!-- dynamically filled -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="task-page-container">
+                    <!-- Compact Header -->
+                    <div class="task-header-compact">
+                        <div class="header-main">
+                            <div class="task-info-compact">
+                                <h1 id="task-title" class="task-title-compact"></h1>
+                                <p id="machine-name" class="machine-name-compact"></p>
+                            </div>
+                            <div class="task-details-compact" id="task-details-compact">
+                                <!-- dynamically filled -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Timer Section - Prioritized -->
+                    <div class="timer-section-main">
+                        <div class="timer-container-main">
+                            <div class="timer-display-main" id="timer-display">00:00:00</div>
+                            <div class="timer-controls-main">
+                                <div class="primary-controls">
+                                    <button id="start-stop" class="btn btn-success action-button-main">
+                                        <i class="fas fa-play me-2"></i>Başlat
+                                    </button>
+                                </div>
+                                <div class="secondary-controls">
+                                    <button id="manual-log-button" class="btn btn-info action-button-secondary">
+                                        <i class="fas fa-clock me-2"></i>Manuel
+                                    </button>
+                                    <button id="mark-done-button" class="btn btn-primary action-button-secondary">
+                                        <i class="fas fa-check me-2"></i>Tamamla
+                                    </button>
+                                    <button id="fault-report-button" class="btn btn-danger action-button-secondary">
+                                        <i class="fas fa-exclamation-triangle me-2"></i>Arıza
+                                    </button>
+                                    <button id="back-button" class="btn btn-secondary action-button-secondary">
+                                        <i class="fas fa-arrow-left me-2"></i>Geri
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div id="machine-name" class="machine-name"></div>
-            <div class="timer-display" id="timer-display">00:00:00</div>
-            <div class="timer-controls">
-                <button id="start-stop" class="action-button green">Başlat</button>
-                <button id="stop-only-button" class="action-button secondary-button hidden">Durdur</button>
-                <button id="manual-log-button" class="action-button secondary-button">Manuel Giriş</button>
-                <button id="mark-done-button" class="action-button secondary-button">Tamamlandı</button>
-                <button id="fault-report-button" class="action-button danger-button">Arıza Bildir</button>
-                <button id="back-button" class="action-button danger-button">Geri Dön</button>
             </div>
         </div>
     </div>
 
     <!-- Fault Report Modal -->
     <div id="fault-modal" class="fault-modal" style="display: none;">
+        <div class="fault-modal-backdrop" id="fault-modal-backdrop"></div>
         <div class="fault-modal-content">
             <div class="fault-modal-header">
-                <h3>Arıza Bildirimi</h3>
+                <h3><i class="fas fa-exclamation-triangle me-2"></i>Arıza Bildirimi</h3>
                 <button class="fault-modal-close" id="fault-modal-close">&times;</button>
             </div>
             <div class="fault-modal-body">
@@ -49,8 +83,12 @@
                 </div>
             </div>
             <div class="fault-modal-footer">
-                <button class="btn btn-secondary" id="fault-modal-cancel">İptal</button>
-                <button class="btn btn-danger" id="fault-modal-submit">Gönder</button>
+                <button class="btn btn-secondary" id="fault-modal-cancel">
+                    <i class="fas fa-times me-2"></i>İptal
+                </button>
+                <button class="btn btn-danger" id="fault-modal-submit">
+                    <i class="fas fa-paper-plane me-2"></i>Gönder
+                </button>
             </div>
         </div>
     </div>
