--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -3,55 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemkom - Bakım</title>
+    <title>GEMKOM - Bakım</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../components/navbar.css">
     <link rel="stylesheet" href="../components/timerWidget.css">
     <link rel="stylesheet" href="maintenance.css">
-    <link rel="stylesheet" href="../components/shared.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
     <link rel="stylesheet" href="../pre-auth.css">
 </head>
 <body class="pre-auth">
-    <!-- Header will be dynamically inserted -->
-    <div id="header-container"></div>
+    <!-- Navigation -->
+    <div id="navbar-container"></div>
 
-    <!-- Mobile Navigation Tabs -->
-    <nav class="mobile-nav">
+    <!-- Page Header -->
+    <div class="page-header">
         <div class="container">
-            <div class="nav-tabs-container">
-                <button class="nav-tab active" data-section="view-requests">
-                    <i class="fas fa-list"></i>
-                    <span>Bakım Talepleri</span>
-                </button>
-                <button class="nav-tab" data-section="create-request">
-                    <i class="fas fa-plus-circle"></i>
-                    <span>Yeni Talep</span>
-                </button>
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <h1 class="page-title">
+                        <i class="fas fa-tools me-3"></i>
+                        Bakım
+                    </h1>
+                    <p class="page-subtitle">Bakım taleplerini yönetin ve ekipman durumlarını izleyin</p>
+                </div>
+                <div class="col-md-4 text-md-end">
+                    <div class="page-actions">
+                        <button class="btn btn-primary" id="refresh-btn">
+                            <i class="fas fa-sync-alt me-2"></i>Yenile
+                        </button>
+                    </div>
+                </div>
             </div>
-        </div>
-    </nav>
-
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="container">
-            <div class="main-container">
-                <!-- Content will be dynamically loaded here -->
-                <div id="maintenance-content">
-                    <!-- Initially shows "Bakım Taleplerini Görüntüle" content -->
+            
+            <!-- Tab Navigation -->
+            <div class="row mt-4">
+                <div class="col-12">
+                    <div class="page-tabs">
+                        <button class="tab-button active" data-tab="view-requests">
+                            <i class="fas fa-list me-2"></i>
+                            <span class="tab-label">Bakım Taleplerini Görüntüle</span>
+                        </button>
+                        <button class="tab-button" data-tab="create-request">
+                            <i class="fas fa-plus-circle me-2"></i>
+                            <span class="tab-label">Bakım/Arıza Talebi Oluştur</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </main>
+    </div>
 
-    <!-- Footer will be dynamically inserted -->
-    <div id="footer-container"></div>
+    <!-- Main Content -->
+    <div class="main-layout">
+        <!-- Content Area -->
+        <div class="content-area">
+            <div class="container">
+                <div class="main-container">
+                    <!-- Content will be dynamically loaded here -->
+                    <div id="maintenance-content">
+                        <!-- Initially shows "Bakım Taleplerini Görüntüle" content -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JS and Popper.js -->
-    <script type="module" src="maintenance.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="maintenance.js"></script>
     <!-- Timer Widget -->
     <script type="module" src="../components/timerWidgetInit.js"></script>
 </body>
