--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -77,6 +77,43 @@
         </div>
     </div>
 
+    <!-- Resolve Modal - Fixed in HTML to prevent recreation -->
+    <div class="modal fade" id="resolveModal" tabindex="-1" aria-labelledby="resolveModalLabel" inert>
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="resolveModalLabel">
+                        <i class="fas fa-check-circle me-2"></i>
+                        Talep Çözümü
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="resolve-form">
+                        <div class="mb-3">
+                            <label for="resolution-description" class="form-label">
+                                <i class="fas fa-edit me-2"></i>
+                                Çözüm Açıklaması
+                            </label>
+                            <textarea class="form-control" id="resolution-description" rows="4" 
+                                      placeholder="Talep nasıl çözüldü? Detayları açıklayın..." required></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        <i class="fas fa-times me-2"></i>
+                        İptal
+                    </button>
+                    <button type="button" class="btn btn-success" id="confirm-resolve">
+                        <i class="fas fa-check me-2"></i>
+                        Çözüldü Olarak İşaretle
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="maintenance.js"></script>
