--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="components/navbar.css">
+    <link rel="stylesheet" href="components/timerWidget.css">
     <link rel="icon" type="image/png" href="images/gemkom.png">
     <link rel="stylesheet" href="pre-auth.css">
 </head>
