refresh button and dropdown

--- a/login/index.html
+++ b/login/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../components/dropdown.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="login-page">
     <div class="login-wrapper">
         <!-- Admin Login Button -->
         <div class="admin-login-btn">
