--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../components/navbar.css">
     <link rel="stylesheet" href="../components/timerWidget.css">
     <link rel="stylesheet" href="../components/dropdown.css">
+    <link rel="stylesheet" href="../components/refreshButton.css">
     <link rel="stylesheet" href="maintenance.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
     <link rel="stylesheet" href="../pre-auth.css">
@@ -33,9 +34,7 @@
                 </div>
                 <div class="col-md-4 text-md-end">
                     <div class="page-actions">
-                        <button class="btn btn-primary" id="refresh-btn">
-                            <i class="fas fa-sync-alt me-2"></i>Yenile
-                        </button>
+                                            <div id="refresh-btn-container"></div>
                     </div>
                 </div>
             </div>
@@ -116,6 +115,7 @@
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../components/refreshButton.js"></script>
     <script type="module" src="maintenance.js"></script>
     <!-- Timer Widget -->
     <script type="module" src="../components/timerWidgetInit.js"></script>
