--- a/machining/index.html
+++ b/machining/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../components/navbar.css">
     <link rel="stylesheet" href="../components/timerWidget.css">
     <link rel="stylesheet" href="../components/dropdown.css">
+    <link rel="stylesheet" href="../components/refreshButton.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
     <link rel="stylesheet" href="../pre-auth.css">
 </head>
@@ -34,9 +35,7 @@
                 </div>
                 <div class="col-md-4 text-md-end">
                     <div class="page-actions">
-                        <button class="btn btn-primary" id="refresh-btn">
-                            <i class="fas fa-sync-alt me-2"></i>Yenile
-                        </button>
+                        <div id="refresh-btn-container"></div>
                     </div>
                 </div>
             </div>
@@ -73,6 +72,7 @@
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../components/refreshButton.js"></script>
     <script type="module" src="machiningService.js"></script>
     <script type="module" src="machining.js"></script>
     <!-- Timer Widget -->
