--- a/machining/tasks/index.html
+++ b/machining/tasks/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="tasks.css">
     <link rel="stylesheet" href="../../components/navbar.css">
     <link rel="stylesheet" href="../../components/timerWidget.css">
+    <link rel="stylesheet" href="../../components/taskTimerModals.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
     <link rel="stylesheet" href="../../pre-auth.css">
 </head>
