--- a/machining/index.html
+++ b/machining/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../components/machineTaskView.css">
     <link rel="stylesheet" href="../components/navbar.css">
     <link rel="stylesheet" href="../components/timerWidget.css">
-    <link rel="stylesheet" href="../components/dropdown.css">
+    <link rel="stylesheet" href="../components/dropdown/dropdown.css">
     <link rel="stylesheet" href="../components/refreshButton.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
     <link rel="stylesheet" href="../pre-auth.css">
