--- a/login/index.html
+++ b/login/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="../components/dropdown.css">
+    <link rel="stylesheet" href="../components/dropdown/dropdown.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body class="login-page">
