--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../components/navbar.css">
-    <link rel="stylesheet" href="../components/dropdown.css">
+    <link rel="stylesheet" href="../components/dropdown/dropdown.css">
+    <link rel="stylesheet" href="../components/genericCard/genericCard.css">
     <link rel="stylesheet" href="../components/refreshButton.css">
     <link rel="stylesheet" href="maintenance.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
@@ -46,10 +47,10 @@
                             <i class="fas fa-list me-2"></i>
                             <span class="tab-label">Bakım Talepleri</span>
                         </button>
-                        <button class="tab-button" data-tab="create-request">
+                        <a href="create/index.html" class="tab-button">
                             <i class="fas fa-plus-circle me-2"></i>
                             <span class="tab-label">Yeni Talep</span>
-                        </button>
+                        </a>
                         <button class="tab-button" data-tab="equipment-status">
                             <i class="fas fa-clipboard-check me-2"></i>
                             <span class="tab-label">Ekipman Durumu</span>
