--- a/maintenance/create/index.html
+++ b/maintenance/create/index.html
@@ -13,37 +13,16 @@
     <link rel="stylesheet" href="../../components/dropdown/dropdown.css">
     <link rel="stylesheet" href="../../components/genericCard/genericCard.css">
     <link rel="stylesheet" href="../../components/refreshButton.css">
+    <link rel="stylesheet" href="../../components/header/header.css">
     <link rel="stylesheet" href="create.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
-    <link rel="stylesheet" href="../../pre-auth.css">
 </head>
-<body class="pre-auth">
+<body>
     <!-- Navigation -->
     <div id="navbar-container"></div>
 
-    <!-- Page Header -->
-    <div class="page-header">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <h1 class="page-title">
-                        <i class="fas fa-plus-circle me-3"></i>
-                        Yeni Bakım Talebi
-                    </h1>
-                    <p class="page-subtitle">Yeni bir bakım veya arıza talebi oluşturun. Detaylı bilgi vererek daha hızlı çözüm sağlayabilirsiniz.</p>
-                </div>
-                <div class="col-md-4 text-md-end">
-                    <div class="page-actions">
-                        <a href="../index.html" class="btn btn-outline-light">
-                            <i class="fas fa-arrow-left me-2"></i>
-                            Geri Dön
-                        </a>
-                        <div id="refresh-btn-container"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Header Component Placeholder -->
+    <div id="header-placeholder"></div>
 
     <!-- Main Content -->
     <div class="main-layout">
