--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -3,119 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEMKOM - Bakım</title>
+    <title>GEMKOM - Bakım Yönetimi</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../components/navbar.css">
-    <link rel="stylesheet" href="../components/dropdown/dropdown.css">
-    <link rel="stylesheet" href="../components/genericCard/genericCard.css">
-    <link rel="stylesheet" href="../components/refreshButton.css">
-    <link rel="stylesheet" href="maintenance.css">
+    <link rel="stylesheet" href="../components/header/header.css">
+    <link rel="stylesheet" href="../components/menu/menu.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
-    <link rel="stylesheet" href="../pre-auth.css">
 </head>
-<body class="pre-auth">
+<body>
     <!-- Navigation -->
     <div id="navbar-container"></div>
 
-    <!-- Page Header -->
-    <div class="page-header">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <h1 class="page-title">
-                        <i class="fas fa-tools me-3"></i>
-                        Bakım Yönetimi
-                    </h1>
-                    <p class="page-subtitle">Bakım taleplerini yönetin, planlı bakımları takip edin ve ekipman durumlarını izleyin</p>
-                </div>
-                <div class="col-md-4 text-md-end">
-                    <div class="page-actions">
-                                            <div id="refresh-btn-container"></div>
-                    </div>
-                </div>
-            </div>
-            
-            <!-- Tab Navigation -->
-            <div class="row mt-4">
-                <div class="col-12">
-                    <div class="page-tabs">
-                        <button class="tab-button active" data-tab="view-requests">
-                            <i class="fas fa-list me-2"></i>
-                            <span class="tab-label">Bakım Talepleri</span>
-                        </button>
-                        <a href="create/index.html" class="tab-button">
-                            <i class="fas fa-plus-circle me-2"></i>
-                            <span class="tab-label">Yeni Talep</span>
-                        </a>
-                        <button class="tab-button" data-tab="equipment-status">
-                            <i class="fas fa-clipboard-check me-2"></i>
-                            <span class="tab-label">Ekipman Durumu</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Main Content -->
     <div class="main-layout">
-        <!-- Content Area -->
-        <div class="content-area">
-            <div class="container">
-                <div class="main-container">
-                    <!-- Content will be dynamically loaded here -->
-                    <div id="maintenance-content">
-                        <!-- Initially shows "Bakım Talepleri" content -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Resolve Modal - Fixed in HTML to prevent recreation -->
-    <div class="modal fade" id="resolveModal" tabindex="-1" aria-labelledby="resolveModalLabel" inert>
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="resolveModalLabel">
-                        <i class="fas fa-check-circle me-2"></i>
-                        Talep Çözümü
-                    </h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="resolve-form">
-                        <div class="mb-3">
-                            <label for="resolution-description" class="form-label">
-                                <i class="fas fa-edit me-2"></i>
-                                Çözüm Açıklaması
-                            </label>
-                            <textarea class="form-control" id="resolution-description" rows="4" 
-                                      placeholder="Talep nasıl çözüldü? Detayları açıklayın..." required></textarea>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        <i class="fas fa-times me-2"></i>
-                        İptal
-                    </button>
-                    <button type="button" class="btn btn-success" id="confirm-resolve">
-                        <i class="fas fa-check me-2"></i>
-                        Çözüldü Olarak İşaretle
-                    </button>
-                </div>
-            </div>
+        <div class="container">
+            
+            <!-- Menu Component Placeholder -->
+            <div id="menu-placeholder"></div>
         </div>
     </div>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../components/refreshButton.js"></script>
     <script type="module" src="maintenance.js"></script>
 </body>
 </html>
