--- a/warehouse/index.html
+++ b/warehouse/index.html
@@ -11,31 +11,13 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="warehouse.css">
     <link rel="stylesheet" href="../components/navbar.css">
+    <link rel="stylesheet" href="../components/menu/menu.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
 </head>
 <body>
     <!-- Navigation -->
     <div id="navbar-container"></div>
 
-    <!-- Page Header -->
-    <div class="page-header">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <h1 class="page-title">
-                        <i class="fas fa-warehouse me-3"></i>
-                        Depo Yönetimi
-                    </h1>
-                    <p class="page-subtitle">Stok takibi, malzeme yönetimi ve envanter işlemleri</p>
-                </div>
-                <div class="col-md-4 text-md-end">
-                    <div class="page-actions">
-                        <div id="refresh-btn-container"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Main Content -->
     <div class="main-layout">
@@ -57,7 +39,6 @@
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../components/refreshButton.js"></script>
     <script type="module" src="warehouse.js"></script>
 </body>
 </html>
