--- a/cnc_cutting/index.html
+++ b/cnc_cutting/index.html
@@ -59,6 +59,10 @@
                             <i class="fas fa-columns me-2"></i>
                             <span class="tab-label">Görev Genel Bakış</span>
                         </button>
+                        <button class="tab-button" data-tab="remnant-entry">
+                            <i class="fas fa-fire me-2"></i>
+                            <span class="tab-label">Fire Sac Girişi</span>
+                        </button>
                     </div>
                 </div>
             </div>
