--- a/cnc_cutting/index.html
+++ b/cnc_cutting/index.html
@@ -59,9 +59,9 @@
                             <i class="fas fa-columns me-2"></i>
                             <span class="tab-label">Görev Genel Bakış</span>
                         </button>
-                        <button class="tab-button" data-tab="remnant-entry">
-                            <i class="fas fa-fire me-2"></i>
-                            <span class="tab-label">Fire Sac Girişi</span>
+                        <button class="tab-button" data-tab="fire-saclar">
+                            <i class="fas fa-list me-2"></i>
+                            <span class="tab-label">Fire Saclar</span>
                         </button>
                     </div>
                 </div>
