--- a/warehouse/weight-reduction/index.html
+++ b/warehouse/weight-reduction/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../components/navbar.css">
     <link rel="stylesheet" href="../../components/header/header.css">
     <link rel="stylesheet" href="../../components/resultsTable/resultsTable.css">
+    <link rel="stylesheet" href="../../components/table/table.css">
     <link rel="stylesheet" href="../../components/genericCard/genericCard.css">
     <link rel="stylesheet" href="../../components/file-attachments/file-attachments.css">
     <link rel="stylesheet" href="../../components/file-viewer/file-viewer.css">
