--- a/machining_old/index.html
+++ b/machining_old/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEMKOM - Operasyonlar</title>
+    <title>GEMKOM - Talaşlı İmalat</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="operations.css">
+    <link rel="stylesheet" href="machining.css">
     <link rel="stylesheet" href="../components/genericCard/genericCard.css">
     <link rel="stylesheet" href="../components/header/header.css">
     <link rel="stylesheet" href="../components/machineTaskView.css">
@@ -32,9 +32,9 @@
                 <div class="col-md-8">
                     <h1 class="page-title">
                         <i class="fas fa-cogs me-3"></i>
-                        Operasyonlar
+                        Talaşlı İmalat
                     </h1>
-                    <p class="page-subtitle">Makine operasyonlarını görüntüleyin ve zamanlayıcıları yönetin. </p>
+                    <p class="page-subtitle">Makine görevlerini görüntüleyin ve zamanlayıcıları yönetin. </p>
                 </div>
                 <div class="col-md-4 text-md-end">
                     <div class="page-actions">
@@ -76,11 +76,9 @@
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../components/refreshButton.js"></script>
-    <script type="module" src="operationsService.js"></script>
-    <script type="module" src="operations.js"></script>
+    <script type="module" src="machiningService.js"></script>
+    <script type="module" src="machining.js"></script>
     <!-- Timer Widget -->
     <script type="module" src="../components/timerWidgetInit.js"></script>
 </body>
 </html>
-
-
